# KK_Projekat

./: .gitignore  README.md
TailCallElimination/: CMakeLists.txt  TailCallEliminationPass.cpp  presentation.md  test.c
TailCallElimination/tests/: countdown.c  multi.c  notail.c  sum.c  three_args.c  voidrec.c
